--- a/src/FlexTemplate/appsettings.json
+++ b/src/FlexTemplate/appsettings.json
@@ -9,5 +9,29 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Seed": {
+    "Languages": [
+      {
+        "Name": "Ukrainian",
+        "ShortName": "UA"
+      }
+    ],
+    "Countries": [
+      {
+        "Name": "Ukraine",
+        "Aliases": [
+
+        ],
+        "Cities": [
+          {
+            "Name": "Kyiv",
+            "Aliases": [
+
+            ]
+          }
+        ]
+      }
+    ]
   }
 }
