--- a/src/FlexTemplate/project.json
+++ b/src/FlexTemplate/project.json
@@ -10,7 +10,8 @@
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
-    "Microsoft.EntityFrameworkCore": "1.0.1"
+    "Microsoft.EntityFrameworkCore": "1.0.1",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0"
   },
 
   "tools": {
