[ADD] remove photo

--- a/src/FlexTemplate/Properties/launchSettings.json
+++ b/src/FlexTemplate/Properties/launchSettings.json
@@ -22,6 +22,12 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "web": {
+      "commandName": "web",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
