--- a/src/FlexTemplate/project.json
+++ b/src/FlexTemplate/project.json
@@ -14,7 +14,8 @@
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.AspNetCore.Identity": "1.0.0",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
-    "Microsoft.Extensions.Configuration.CommandLine": "1.0.0"
+    "Microsoft.Extensions.Configuration.CommandLine": "1.0.0",
+    "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.1"
   },
 
   "tools": {
