--- a/src/FlexTemplate/appsettings.json
+++ b/src/FlexTemplate/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=FlexTemplateDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:koscheyev.database.windows.net,1433;Initial Catalog=FlexTemplate;Persist Security Info=False;User ID=dba;Password=Capslock1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
