--- a/FlexTemplate.DataAccessLayer/FlexTemplate.DataAccessLayer.csproj
+++ b/FlexTemplate.DataAccessLayer/FlexTemplate.DataAccessLayer.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
