--- a/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
+++ b/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
