--- a/FlexTemplate.BusinessLogicLayer/FlexTemplate.BusinessLogicLayer.csproj
+++ b/FlexTemplate.BusinessLogicLayer/FlexTemplate.BusinessLogicLayer.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Html.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
