--- a/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
+++ b/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
@@ -5,6 +5,10 @@
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
