--- a/FlexTemplate.DataAccessLayer/FlexTemplate.DataAccessLayer.csproj
+++ b/FlexTemplate.DataAccessLayer/FlexTemplate.DataAccessLayer.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.CodeAnalysis">
+      <HintPath>..\..\..\.nuget\packages\microsoft.codeanalysis.common\1.3.0\lib\netstandard1.3\Microsoft.CodeAnalysis.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
