--- a/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
+++ b/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="npm-debug.log" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
