--- a/FlexTemplate.PresentationLayer/package.json
+++ b/FlexTemplate.PresentationLayer/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "",
     "babel-preset-react": "^6.24.1",
-    "webpack": "",
+    "webpack": "^3.0.0",
     "webpack-dev-server": ""
   },
   "dependencies": {
@@ -26,7 +26,11 @@
     "webpack": "^3.0.0"
   },
   "scripts": {
-  	"runWebpack": "webpack-dev-server --hot --inline"
+    "runWebpack": "webpack-dev-server --hot --inline"
   },
-    "-vs-binding": { "afterBuild": [ "runWebpack" ] }
+  "-vs-binding": {
+    "afterBuild": [
+      "runWebpack"
+    ]
+  }
 }
