--- a/FlexTemplate.DataAccessLayer/FlexTemplate.DataAccessLayer.csproj
+++ b/FlexTemplate.DataAccessLayer/FlexTemplate.DataAccessLayer.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FlexTemplate.BlobAccessLayer\FlexTemplate.BlobAccessLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.CodeAnalysis">
       <HintPath>..\..\..\.nuget\packages\microsoft.codeanalysis.common\1.3.0\lib\netstandard1.3\Microsoft.CodeAnalysis.dll</HintPath>
     </Reference>
