--- a/FlexTemplate.BlobAccessLayer/FlexTemplate.BlobAccessLayer.csproj
+++ b/FlexTemplate.BlobAccessLayer/FlexTemplate.BlobAccessLayer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="1.1.2" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
   </ItemGroup>
 
