--- a/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
+++ b/FlexTemplate.PresentationLayer/FlexTemplate.PresentationLayer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
@@ -11,13 +11,6 @@
 
   <ItemGroup>
     <None Remove="npm-debug.log" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="wwwroot\Resources\Defaults\blog - Copy.jpg">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="wwwroot\Resources\Defaults\city.jpg" />
   </ItemGroup>
   <ItemGroup>
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.0.0-msbuild2-final" />
